<resources>
    <string name="app_name">팩트체커</string>
    <string name="title_home">홈</string>
    <string name="title_channel">채널</string>
    <string name="title_popular">인기</string>
    <string name="title_more">더보기</string>
    <string name="title_google_account">구글 계정</string>
    <string name="link_google_account">구글 계정 연결</string>
    <string name="title_report_all">모두 신고</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="saved_sign_in_result">saved_sign_in_result</string>
    <string name="sign_in">로그인</string>
    <string name="dialog_sign_in">컨텐츠를 신고하려면 구글 계정으로 로그인하세요.</string>
    <string name="description_video_thumbnail">동영상 썸네일</string>
    <string name="loading_videos_error">동영상 로딩 중 에러가 발생했습니다.</string>
    <string name="loading_channels_error">채널 로딩 중 에러가 발생했습니다.</string>

    <string name="minutes_ago">분 전</string>
    <string name="hours_ago">시간 전</string>
    <string name="days_ago">일 전</string>
    <string name="months_ago">개월 전</string>
    <string name="years_ago">년 전</string>
    <string name="description_more_button">more button</string>
    <string name="report">신고</string>
    <string name="remove_video_from_list">목록에서 삭제</string>
    <string name="description_channel_thumbnail">채널 썸네일</string>
    <string name="saved_report_message">saved_report_message</string>
    <string name="saved_comment_message">saved_comment_message</string>
    <string name="saved_search_period">saved_search_period</string>
    <string name="title_settings">설정</string>
    <string name="report_message">동영상 신고 문구</string>
    <string name="title_donation">후원</string>
    <string name="donate_to_developer">개발자에게 후원하기</string>
    <string name="title_video">동영상</string>
    <string name="title_progress_report">신고 중</string>
    <string name="dialog_report_complete">건 신고 완료</string>
    <string name="dialog_no_video_for_report">신고할 동영상이 없습니다.</string>
    <string name="dialog_report_complete_zero">신고한 동영상이 없습니다.</string>
    <string name="video_marked_excluded">동영상이 제외 되었습니다.</string>
    <string name="video_marked_added">동영상이 추가 되었습니다.</string>
    <string name="title_reported_videos">신고한 동영상</string>
    <string name="title_excluded_videos">제외한 동영상</string>
    <string name="add_video_to_home_list">목록에 추가</string>
    <string name="title_no_videos">목록에 동영상이 없습니다.</string>
    <string name="cancel_report_all">모두 신고가 취소 되었습니다.</string>
    <string name="title_share_video">동영상 공유하기</string>

    <string name="title_add_blacklist_video">리스트에 동영상 추가</string>
    <string name="title_add_blacklist_channel">리스트에 채널 추가</string>
    <string name="time_out_message">작업시간이 초과되었습니다.</string>
    <string name="donation_image">use laptop computer</string>
    <string name="title_donation_button">후원</string>
    <string name="cancel_report">신고가 취소되었습니다.</string>
    <string name="url">URL</string>
    <string name="confirm_url">URL\n확인</string>
    <string name="description">Description</string>
    <string name="add_blacklist">추가하기</string>
    <string name="confirm_url_pass">올바른 URL 입니다.</string>
    <string name="confirm_url_fail">잘못된 URL 입니다.</string>
    <string name="confirm_url_already_registered">이미 등록된 URL 입니다.</string>
    <string name="adding_blacklist_success">리스트 추가 접수가 완료 되었습니다.</string>
    <string name="adding_blacklist_error">리스트 추가 중 에러가 발생 했습니다.</string>
    <string name="title_no_channels">목록에 채널이 없습니다.</string>

    <string name="title_search_period">기간 설정</string>
    <string name="title_search_period_week">지난 1주</string>
    <string name="title_search_period_month">지난 1개월</string>
    <string name="title_search_period_year">지난 1년</string>
    <string name="title_account">계정</string>
    <string name="title_search_period_all">모든 날짜</string>
    <string name="title_app_version">앱 버전</string>

    <string name="thanks_to_donation_message">후원해주셔서 감사합니다.</string>
    <string name="comment_message">동영상 댓글 문구</string>
    <string name="title_auto_comment">동영상 자동 댓글</string>
    <string name="saved_auto_comment_enabled">saved_is_auto_comment_enabled</string>
    <string name="summary_auto_comment">신고한 유튜브 동영상에 댓글이 자동으로 입력됩니다.\n내 채널을 만든 후 사용해 주세요.</string>
    <string name="title_view_list">단일 열 보기</string>
    <string name="title_view_grid">여러 열 보기</string>
    <string name="saved_channels_view_type">saved_channels_view_type</string>
    <string name="title_add_blacklist">리스트에 추가 하시겠습니까?</string>

    <string name="too_many_flags">Too many flags.</string>
    <string name="saved_timeout_value">saved_timeout_value</string>
    <string name="title_timeout_value">신고 타임아웃 시간</string>
    <string name="default_timeout_value">10</string>

    <string name="seconds">초</string>
    <string name="reported_video_count_postfix">성공</string>
    <string name="progress_postfix">진행 중</string>
    <string name="saved_report_succeed_at">saved_report_succeed_at</string>
    <string name="report_succeed_at_prefix">최근 신고</string>
    <string name="title_excluded_channels">제외한 채널</string>
    <string name="description_channel_checked">선택된 채널</string>
    <string name="title_edit_channels">채널 편집</string>
    <string name="title_complete_edit_channels">채널 편집 완료</string>
</resources>
