<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="125dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="start|center_horizontal|center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        android:text="@string/title_add_blacklist"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <TextView
            android:id="@+id/text_view_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>