<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.widget.CompoundButton" />

        <import type="android.view.View" />

        <variable
            name="context"
            type="android.content.Context" />

        <variable
            name="viewmodel"
            type="com.redbeanlatte11.factchecker.ui.home.AddBlacklistVideoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/linear_layout_url"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_view_video_title"
            app:layout_constraintVertical_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/url"
                    android:text="@{viewmodel.videoUrl}"
                    app:textWatcher="@{viewmodel.urlTextWatcher}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm_url"
                android:onClick="@{() -> viewmodel.confirmVideoUrl(viewmodel.videoUrl)}"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_video_title"
            style="@style/AddBlacklistFont"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_url"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_video_title"
            app:layout_constraintBottom_toTopOf="@id/button_add_video_blacklist"
            app:layout_constraintVertical_weight="5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/button_add_video_blacklist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/add_video_blacklist"
            android:enabled="@{viewmodel.canAdd}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>